# typemut

./: .gitignore  CLAUDE.md  Makefile  README.md  lefthook.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
src/typemut/: __init__.py  cli.py  config.py  db.py  discovery.py  engine.py  imports.py  parallel.py  registry.py
src/typemut/operators/: __init__.py  annotated.py  base.py  container.py  iterator_generator.py  literal.py  optional.py  sibling.py  tuple_ellipsis.py  union.py  variance.py  widen.py  widen_type.py
src/typemut/reporting/: html.py  terminal.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_discovery.py  test_engine.py  test_false_kill.py  test_imports.py  test_parallel.py  test_registry.py  test_reporting.py
tests/fixtures/: generics.py  pydantic_models.py  simple_unions.py
tests/test_operators/: test_annotated.py  test_container.py  test_get_enabled.py  test_iterator_generator.py  test_literal.py  test_optional.py  test_sibling.py  test_tuple_ellipsis.py  test_union.py  test_variance.py  test_widen.py  test_widen_type.py
