[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typemut"
dynamic = ["version"]
description = "Mutation testing for type annotations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Niсл Khitrov", email = "khitrov34@gmail.com" },
]
keywords = ["mutation-testing", "type-annotations", "mypy", "pyright", "type-checking", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "parso>=0.8",
    "rich>=13.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/nkhitrov/typemut"
Repository = "https://github.com/nkhitrov/typemut"
Issues = "https://github.com/nkhitrov/typemut/issues"

[project.scripts]
typemut = "typemut.cli:main"

[tool.hatch.version]
path = "src/typemut/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/typemut"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pytest-cov>=4.0",
    "coverage-threshold>=0.4",
]

[tool.coverage.run]
source = ["typemut", "tests"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage-threshold]
line_coverage_min = 80

[tool.coverage-threshold.modules."src/typemut/config.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/discovery.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/engine.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/__init__.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/annotated.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/base.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/container.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/iterator_generator.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/literal.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/optional.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/tuple_ellipsis.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/union.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/variance.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/widen.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/widen_type.py"]
file_line_coverage_min = 100
