[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typemut"
dynamic = ["version"]
description = "Mutation testing for type annotations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Niсk Khitrov", email = "khitrov34@gmail.com" },
]
keywords = ["mutation-testing", "type-annotations", "mypy", "pyright", "type-checking", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "parso>=0.8",
    "rich>=13.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/nkhitrov/typemut"
Repository = "https://github.com/nkhitrov/typemut"
Issues = "https://github.com/nkhitrov/typemut/issues"

[project.scripts]
typemut = "typemut.cli:main"

[tool.hatch.version]
path = "src/typemut/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/typemut"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pytest-cov>=4.0",
    "coverage-threshold>=0.4",
    "ruff>=0.11",
    "flake8>=7.0",
    "wemake-python-styleguide>=1.0",
    "flake8-newspaper-style>=0.4",
]

[tool.coverage.run]
source = ["typemut", "tests"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage-threshold]
line_coverage_min = 80

[tool.coverage-threshold.modules."src/typemut/config.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/engine.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/__init__.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/base.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/container.py"]
file_line_coverage_min = 100

[tool.coverage-threshold.modules."src/typemut/operators/widen.py"]
file_line_coverage_min = 100

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes — unused imports, undefined names
    "E", "W", # pycodestyle — style errors/warnings
    "I",      # isort — import ordering
    "N",      # pep8-naming
    "UP",     # pyupgrade — modern Python syntax
    "B",      # flake8-bugbear — common bugs
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "S",      # bandit — security (shell=True etc.)
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint — performance
    "C4",     # flake8-comprehensions
]
ignore = [
    "S101",   # assert — used for internal invariants
    "S602",   # subprocess with shell=True — intentional for CLI tool
    "S603",   # subprocess call checked
    "S607",   # start process with partial path
    "S110",   # try-except-pass — handled in cleanup code
    "SIM105", # contextlib.suppress — will add logging instead
    "PERF401", # list.extend vs append in loop — readability preference
    "E501",   # line too long — handled by formatter, except comments/strings
]

[tool.ruff.lint.per-file-ignores]
"src/typemut/reporting/html.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "parso.*"
ignore_missing_imports = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "typemut.discovery",
    "typemut.registry",
    "typemut.operators.*",
]
disallow_untyped_calls = false
warn_return_any = false
